# AG

./: README.md
backend/discovery-service/: Dockerfile  go.mod  main.go
backend/guardrails-service/: Cargo.toml  Dockerfile
backend/guardrails-service/src/: main.rs
frontend/aegis-ui/: .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/aegis-ui/src/: App.jsx  App.tsx  constants.ts  index.css  types.ts  utils.ts
frontend/aegis-ui/src/components/: PolicyEditor.tsx
infra/: docker-compose.yml
