[package]
name = "guardrails-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-actix-native-tls", "postgres", "uuid", "json", "chrono"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sha256 = "1.0.3"

